bugs fixed on mobile screen

--- a/src/components/Checkout/CheckoutForm.css
+++ b/src/components/Checkout/CheckoutForm.css
@@ -8,11 +8,11 @@
     width: 100%;
     padding: 0.5rem 0;
     font-weight: 500;
-    font-size: 15px;
+    font-size: 17px;
 }
 .checkout-form-label{
-    font-size: 15px;
-    padding-top: 1rem;
+    font-size: 17px;
+    padding-top: 1.2rem;
     display: flex;
     align-items: center
 }
@@ -37,7 +37,7 @@
     font-family: 'Livvic', sans-serif;
     font-weight: 700;   
     font-size: 20px;
-    margin: 0.5rem 0 1rem 0;
+    margin: 3rem 0 2rem 0;
 }
 .checkbox-input{
     width: 25px;
@@ -60,23 +60,9 @@
     .checkout-form-input{
         padding: 0.2rem 0;
     }
-    .checkout-button.active{
-        margin:0.5rem 0
-    }
 }
 @media (min-width:600px) and (max-width:768px){
     .checkout-form-input{
-        padding: 0.3rem 0;
-    }
-    .checkout-button{
-        margin: 1.2rem 0 1.2rem 0;
-    }
-}
-@media (min-width:768px) and (max-width:992px){
-    .checkout-form-input{
-        padding: 0.4rem 0;
-    }
-    .checkout-button{
-        margin: 1.4rem 0 1.4rem 0;
+        padding: 0.7rem 0;
     }
 }
