--- a/src/modules/Checkout/Checkout.css
+++ b/src/modules/Checkout/Checkout.css
@@ -9,6 +9,8 @@
     border-radius: 16px;
     transform: translate(-50%, -50%);
     z-index: 5;
+    height: 90vh;
+    overflow: auto;
 }
 .checkout{
     width: 80%;
@@ -23,16 +25,20 @@
     align-items: center;
     justify-content: space-between;
 }
+.checkout-header-title h1{
+    font-size: 30px;
+}
 .checkout-header p{
     margin: 0;
     width: 65%;
     font-weight: 600;
-    font-size: 15px;
+    font-size: 18px;
     color: #7F7F7F;
 }
 @media (max-width:600px){
     .checkout-container{
         width:100%;
+        height: 100vh;
     }
     .checkout{
         margin-top:0rem;
@@ -48,10 +54,21 @@
     .checkout-header p{
         width: 100%;
     }
+    .checkout-container{
+        width: 90%;
+    }
 }
 @media (min-width:768px) and (max-width:992px){
     .checkout{
         margin-top:0.5rem;
+    }
+    .checkout-container{
+        width: 80%;
+    }
+}
+@media (min-width:992px) and (max-width:1200px){
+    .checkout-container{
+        width: 75%;
     }
 }
 
