--- a/src/modules/SuccessModal/SuccessModal.css
+++ b/src/modules/SuccessModal/SuccessModal.css
@@ -1,5 +1,5 @@
 .success-container{
-    width:45rem;
+    width:100%;
     position: fixed;
     left:50%;
     right: 50%;
